# GP-CATE

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/ihdp/: README.md
experiments/: __init__.py  _common.py  diagnostics.py  reproduce_all.py  table1_bias_diagnosis.py  table2_negative_dr.py  table3_4_coverage.py  table5_pehe.py
gpcate/: __init__.py  baselines.py  basis.py  datasets.py  gp_cate.py  meta_learners.py  pseudo_outcome.py
tests/: test_datasets.py  test_estimators.py  test_gp_cate.py
